atualização de formulário

--- a/contato.html
+++ b/contato.html
@@ -42,10 +42,12 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="intro-img">
                     <img src="assets/img/imagem-entregas_footer.jpg"
                         alt="Compromisso e pontualidade a cada entrega, entregas rápidas">
                 </div>
+            </div>
                 <div class="contact-form">
                     <fieldset class="form-grid">
                         <legend>Nos envie um e-mail</legend>
@@ -62,7 +64,7 @@
                             <input type="text" name="last-name" id="last-name" placeholder="Your last name">
                         </div>
                         <div class="form-group full-width">
-                            <label for="email">
+                            <label class="full-width" for="email">
                                 E-mail
                             </label>
                             <input type="email" name="email" id="email" placeholder="Your e-mail">
@@ -74,8 +76,10 @@
                             <textarea name="message" id="messsage" cols="30" rows="10"
                                 placeholder="Your message"></textarea>
                         </div>
-                        <div class="form-group enviar full-width">
-                            <button type="submit">Enviar mensagem</button>
+                        <div class="grid-button">
+                            <div class="form-group enviar">
+                                <button type="submit">Enviar mensagem</button>
+                            </div>
                         </div>
                     </fieldset>
                 </div>
