atualização de contato do formulário e atualização de conteúdo

--- a/Sobre.html
+++ b/Sobre.html
@@ -46,73 +46,43 @@
                 <div class="grid">
                     <div>
 
-                        <h3>Atendimento ao Cliente</h3>
+                        <h3>Comprometidos com a Eficiência e Agilidade</h3>
                         <p>
-                            A Way Última Milha valoriza o atendimento ao cliente e se esforça para oferecer um suporte
-                            excepcional em todas as etapas do processo de entrega. Se surgir algum problema ou dúvida,
-                            os clientes podem contar com uma equipe dedicada pronta para ajudar e resolver qualquer
-                            questão de forma rápida e eficiente.
+                            Na WLMC Transportes Rodoviários, não somos apenas uma transportadora. Somos uma equipe
+                            dedicada e comprometida em superar suas expectativas. Nossos serviços não se limitam apenas
+                            à entrega; estamos aqui para entender suas demandas e oferecer soluções personalizadas que
+                            impulsionem o seu negócio.
                         </p>
                     </div>
 
                     <div>
-                        <h3>Rastreabilidade:</h3>
-                        <p>A empresa oferece um sistema de rastreamento robusto que permite aos clientes acompanhar suas
-                            cargas em tempo real. Essa transparência proporciona tranquilidade aos remetentes e
-                            destinatários, pois eles podem monitorar o progresso de suas entregas e estar cientes de
-                            qualquer alteração no itinerário</p>
+                        <h3>Tecnologia e Profissionalismo ao Seu Serviço</h3>
+                        <p>Conte com nossa equipe altamente capacitada e tecnologicamente atualizada para garantir que
+                            suas entregas sejam realizadas com eficiência e precisão. Estamos prontos para ir além do
+                            esperado, proporcionando-lhe a tranquilidade e a confiança necessárias para focar no que
+                            realmente importa: seu negócio.
+                            Através de nosso sistema o cliente fica atualizado quanto as suas coletas e entregas em
+                            tempo real site: 
+                            <a href="http://www.waysistemalogistico.com.br" target="_blank">www.waysistemalogistico.com.br</a>
+                        </p>
                     </div>
                     <div>
-                        <h3>Pontualidade</h3>
-                        <p>A Way Última Milha tem um histórico comprovado de entregas pontuais. Isso significa que os
-                            clientes podem confiar que suas encomendas chegarão no prazo esperado, sem atrasos
-                            indesejados. A pontualidade é essencial para manter a eficiência da cadeia de suprimentos e
-                            garantir a satisfação do cliente.</p>
+                        <h3>Autorizações de Funcionamentos</h3>
+                        <div class="funcionamentos">
+                            <div class="text-funcionamento">
+                                    <li>AE: Especial Portaria 344</li>
+                                    <li>AFE: Medicamentos</li>
+                                    <li>AFE: Correlatos</li>
+                                    <li>AFE: Cosméticos</li>
+                                    <li>SIVISA: Licença de Funcionamento do Sistema de
+                                        Informação da Vigilância Sanitária
+                                    </li>
+            
+                                </ul>
+                            </div>
+                        </div>
+                        <p></p>
                     </div>
-                </div>
-            </div>
-        </section>
-        <section lass="white-bg section">
-            <div class="main-content top3-content">
-                <p>
-                    A WLMC utiliza um sistema de rastreamento em tempo real para acompanhar a localização de suas
-                    entregas. O sistema é fornecido pela Zatix ou Sighra, e oferece recursos como: Posicionamento
-                    global (GPS), Monitoramento de velocidade, Histórico de trajetos, Alertas de eventos.
-                </p>
-                <h2 class="text-h2-index">Localização</h2>
-                <p>A WLMC utiliza o sistema de localização da Sascar para identificar a localização de seus veículos e
-                    entregas. O sistema oferece cobertura em todo o Brasil, e permite que a WLMC rastreie suas
-                    entregas em tempo real.
-                </p>
-                <h2 class="text-h2-index">Câmeras e alarmes</h2>
-                <p>As unidades da WLMC são equipadas com um sistema de câmeras e alarmes para prevenir roubos e
-                    furtos. O sistema é monitorado 24 horas por dia, 7 dias por semana, por uma empresa especializada
-                    em segurança.
-                </p>
-                <h2 class="text-h2-index">Gerenciamento de Risco</h2>
-                <p>A WLMC conta com um serviço de gerenciamento de risco dedicado para identificar e mitigar riscos.
-                    O serviço é fornecido por uma empresa especializada em gerenciamento de risco, e oferece recursos
-                    como, Análise de riscos, Planos de contingência, Monitoramento de riscos, Monitoramento de
-                    Entregas                    
-                </p>
-                <p>Os clientes da WLMC podem acompanhar o status de suas entregas em tempo real, por meio do
-                    site: 
-                </p>
-                <a href="http://www.waysistemalogistico.com.br" target="_blank">www.waysistemalogistico.com.br</a>
-            </div>
-            <div class="funcionamentos">
-                <div class="text-funcionamento">
-                    <h2 class="text-h2-index">Autorizações de Funcionamentos</h2>
-                    <ul>
-                        <li>AE: Especial Portaria 344</li>
-                        <li>AFE: Medicamentos</li>
-                        <li>AFE: Correlatos</li>
-                        <li>AFE: Cosméticos</li>
-                        <li>SIVISA: Licença de Funcionamento do Sistema de 
-                            Informação da Vigilância Sanitária
-                        </li>
-
-                    </ul>
                 </div>
             </div>
         </section>
