--- a/index.html
+++ b/index.html
@@ -27,16 +27,13 @@
         </a>
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>Aqui na Way última milha </h2>
+                <h2>Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo </h2>
                 <p>
-                    Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo em Regiões Estratégicas.
+                    Sua parceira estratégica em logística para o setor de Saúde, Medicamentos, Beleza e Higiene.
                 </p>
-                <p>Na WLMC Transportes Rodoviários, não somos apenas uma transportadora; somos comprometidos em oferecer
-                    soluções ágeis e eficientes para as demandas do setor de Saúde, Medicamentos, Beleza e Higiene.
+                <p>Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo, oferecemos soluções ágeis e confiáveis para suas necessidades de transporte.
                 </p>
-                <p>Nossa equipe altamente capacitada e tecnologicamente atualizada está pronta para entender suas
-                    necessidades e superar expectativas. Conte conosco para um serviço de excelência que atenda
-                    plenamente às suas necessidades.</p>
+
             </div>
 
             <div class="intro-img">
