--- a/servicos.html
+++ b/servicos.html
@@ -30,9 +30,8 @@
             </a>
             <div class="main-content grid-one-content">
                 <h2 class="grid-main-heading">Serviços oferecidos</h2>
-                <p class="grid-description">A frota da WLMC é composta por veículos de pequeno, médio
-                    e grande porte, rastreados e blindados se necessário. Todos os
-                    veículos possuem seguro próprio e gerenciamento de risco</p>
+                <h2 class="text-h2-index">FROTA E LOGÍSTICA SEGURA</h2>
+                <p class="grid-description">A WLMC oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
                 <div class="grid">
                     <div>
                         <div class="gallery-img">
@@ -40,10 +39,7 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Carga fracionada</h1>
-                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas, adaptados às
-                                necessidades específicas de cada cliente. Com nossa abordagem flexível e eficiente,
-                                garantimos que mesmo as cargas menores sejam entregues com rapidez e segurança,
-                                proporcionando tranquilidade aos nossos clientes</p>
+                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas. Nossa abordagem flexível e eficiente garante que até mesmo as cargas menores sejam entregues com rapidez e segurança, proporcionando tranquilidade aos nossos clientes.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
@@ -51,29 +47,22 @@
 
                     <div>
                         <div class="gallery-img">
-                            <img src="assets/img/entregas-urgentes.jpeg ">
+                            <img src="assets/img/pequenas-entregas.jpeg ">
                         </div>
                         <div class="grid-text-img">
                             <h1>Cargas urgentes</h1>
-                            <p>A Way Última Milha é especializada na entrega de cargas urgentes. Com nossa equipe
-                                dedicada e processos ágeis, garantimos que suas cargas urgentes sejam entregues com
-                                máxima prioridade e dentro do prazo necessário. Conte conosco para soluções rápidas e
-                                confiáveis em suas necessidades logísticas mais urgentes.</p>
+                            <p>Especializados na entrega de cargas urgentes, a Way Última Milha garante máxima prioridade e prazos rápidos. Com uma equipe dedicada e processos ágeis, estamos aqui para soluções rápidas e confiáveis para suas necessidades logísticas mais urgentes.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
                     </div>
                     <div>
                         <div class="gallery-img">
-                            <img src="assets/img/pequenas-entregas.jpeg">
+                            <img src="assets/img/entregas-urgentes.jpeg" >
                         </div>
                         <div class="grid-text-img">
-                            <h1>Pequenas entregas</h1>
-                            <p>A Way Última Milha oferece soluções eficientes para pequenas entregas. Com nossa
-                                logística flexível e adaptável, garantimos que até as cargas menores sejam entregues com
-                                agilidade e segurança. Independentemente do tamanho da sua remessa, estamos
-                                comprometidos em fornecer um serviço confiável e de qualidade para atender às suas
-                                necessidades.</p>
+                            <h1>TRANSFERÊNCIAS COM VEÍCULOS DEDICADOS</h1>
+                            <p>Oferecemos entregas dedicadas como uma solução personalizada para atender às suas necessidades específicas. Disponibilizamos o veículo adequado para sua operação, levando em consideração o tipo de carga, volume e distância a ser percorrida.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
                     </div>
