--- a/Sobre.html
+++ b/Sobre.html
@@ -29,10 +29,9 @@
                 <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
             </a>
             <div class="main-content grid-one-content">
-                <h2 class="grid-main-heading">3 razões para nos escolher</h2>
+                <h2 class="grid-main-heading text-index" >3 razões para nos escolher</h2>
                 <div class="grid">
                     <div>
-
                         <h3>Comprometidos com a Eficiência e Agilidade</h3>
                         <p>
                             Na WLMC Transportes Rodoviários, não somos apenas uma transportadora. Somos uma equipe
