--- a/Sobre.html
+++ b/Sobre.html
@@ -63,6 +63,7 @@
                                     <li>SIVISA: Licença de Funcionamento do Sistema de
                                         Informação da Vigilância Sanitária
                                     </li>
+                                    <li>CRF: Conselho Regional - Farmacêutico Responsavel</li>
             
                                 </ul>
                             </div>
