--- a/Sobre.html
+++ b/Sobre.html
@@ -34,7 +34,7 @@
                     <div>
                         <h3>Comprometidos com a Eficiência e Agilidade</h3>
                         <p>
-                            Na WLMC Transportes Rodoviários, não somos apenas uma transportadora. Somos uma equipe
+                            Na Way Transportes Rodoviários, não somos apenas uma transportadora. Somos uma equipe
                             dedicada e comprometida em superar suas expectativas. Nossos serviços não se limitam apenas
                             à entrega; estamos aqui para entender suas demandas e oferecer soluções personalizadas que
                             impulsionem o seu negócio.
