--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
             </a>
             <div class="main-content intro-content">
                 <div class="intro-text-content">
-                    <h2>Contato</h2>
+                    <h2 class="text-index">Contato</h2>
                     <p>
                         Para entrar em contato conosco, estamos disponíveis por telefone (11) 98440-4203 durante o horário comercial padrão, por e-mail a qualquer momento ou pelo WhatsApp. Nossa equipe dedicada está pronta para ajudar com suas consultas, fornecer informações adicionais sobre nossos serviços ou resolver quaisquer problemas que você possa ter. Não hesite em nos contatar, estamos aqui para ajudar.
                     </p>
