--- a/localização.html
+++ b/localização.html
@@ -29,7 +29,7 @@
     </section>
     <section class="grid-loc">
         <div class="text-loc">
-            <h1>Regiões atendidas</h1>
+            <h1 class="text-index">Regiões atendidas</h1>
             <h2>Polo e Região Atendida</h2>
             <div class="red-circle"></div>
             <p>
