--- a/servicos.html
+++ b/servicos.html
@@ -29,9 +29,9 @@
                 <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
             </a>
             <div class="main-content grid-one-content">
-                <h2 class="grid-main-heading">Serviços oferecidos</h2>
-                <h2 class="text-h2-index">FROTA E LOGÍSTICA SEGURA</h2>
-                <p class="grid-description">A WLMC oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
+                <h2 class="text-index">Serviços oferecidos</h2>
+                <h2 class="text-h2">FROTA E LOGÍSTICA SEGURA</h2>
+                <p class="grid-description">A Way oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
                 <div class="grid">
                     <div>
                         <div class="gallery-img">
