--- a/servicos.html
+++ b/servicos.html
@@ -31,7 +31,7 @@
             <div class="main-content grid-one-content">
                 <h2 class="text-index">Serviços oferecidos</h2>
                 <h2 class="text-h2">FROTA E LOGÍSTICA SEGURA</h2>
-                <p class="grid-description">A Way oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
+                <p class="grid-description">A Way Última Milha oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
                 <div class="grid">
                     <div>
                         <div class="gallery-img">
