atualização, nome da página

--- a/servicos.html
+++ b/servicos.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços</title>
+    <title>Way Última Milha Serviços</title>
+    <meta name="description" content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
+    <meta name="keywords" content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
+    <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
