atualização de espaçamento

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </a>
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2 class="text-index">Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo </h2>
+                <h1>Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo </h1>
                 <p>
                     Sua parceira estratégica em logística para o setor de Saúde, Medicamentos, Beleza e Higiene.
                 </p>
