atualizações de tamanho

--- a/localização.html
+++ b/localização.html
@@ -185,6 +185,7 @@
                 }
 
                 .text-loc {
+                    height: 60vh;
                     margin-top: 5vh;
                     align-items: center;
                     /* Centraliza os itens na horizontal */
