atualização box-shadow

--- a/contato.html
+++ b/contato.html
@@ -26,11 +26,13 @@
 
 <body>
     <header-component></header-component>
+    <div class="box-mobile">
+        <a href="index.html">
+            <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
+        </a>
+    </div>
     <main>
         <section id="Contact" class="intro main-bg section">
-            <a href="index.html">
-                <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
-            </a>
             <div class="main-content intro-content">
                 <div class="intro-text-content">
                     <h2 class="text-index">Contato</h2>
