--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 
 <body>
     <header-component></header-component>
-    <section id="home" class="intro main-bg section">
+    <div class="box-mobile">
         <a href="index.html">
             <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
         </a>
+    </div>
+    <section id="home" class="intro main-bg section">
+        
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h1>Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo </h1>
