--- a/servicos.html
+++ b/servicos.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Way Última Milha Serviços</title>
-    <meta name="description" content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
-    <meta name="keywords" content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
+    <meta name="description"
+        content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
+    <meta name="keywords"
+        content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
     <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,18 +25,20 @@
 </head>
 
 <body>
-    <div class="color-menu">
-        <header-component></header-component>
+    <header-component></header-component>
+    <div class="box-mobile">
+        <a href="index.html">
+            <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
+        </a>
     </div>
     <main>
         <section id="gallery" class="grid-one main-bg section">
-            <a href="index.html">
-                <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
-            </a>
             <div class="main-content grid-one-content">
                 <h2 class="text-index">Serviços oferecidos</h2>
                 <h2 class="text-h2">FROTA E LOGÍSTICA SEGURA</h2>
-                <p class="grid-description">A Way Última Milha oferece uma frota diversificada de veículos de pequeno, médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
+                <p class="grid-description">A Way Última Milha oferece uma frota diversificada de veículos de pequeno,
+                    médio e grande porte, equipados com rastreamento e blindagem conforme necessários. Todas as cargas
+                    são seguradas e gerenciadas para garantir a segurança de suas cargas.</p>
                 <div class="grid">
                     <div>
                         <div class="gallery-img">
@@ -42,7 +46,9 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Carga fracionada</h1>
-                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas. Nossa abordagem flexível e eficiente garante que até mesmo as cargas menores sejam entregues com rapidez e segurança, proporcionando tranquilidade aos nossos clientes.</p>
+                            <p>A Way Última Milha oferece serviços de entrega de cargas fracionadas. Nossa abordagem
+                                flexível e eficiente garante que até mesmo as cargas menores sejam entregues com rapidez
+                                e segurança, proporcionando tranquilidade aos nossos clientes.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
@@ -54,18 +60,22 @@
                         </div>
                         <div class="grid-text-img">
                             <h1>Cargas urgentes</h1>
-                            <p>Especializados na entrega de cargas urgentes, a Way Última Milha garante máxima prioridade e prazos rápidos. Com uma equipe dedicada e processos ágeis, estamos aqui para soluções rápidas e confiáveis para suas necessidades logísticas mais urgentes.</p>
+                            <p>Especializados na entrega de cargas urgentes, a Way Última Milha garante máxima
+                                prioridade e prazos rápidos. Com uma equipe dedicada e processos ágeis, estamos aqui
+                                para soluções rápidas e confiáveis para suas necessidades logísticas mais urgentes.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
 
                     </div>
                     <div>
                         <div class="gallery-img">
-                            <img src="assets/img/entregas-urgentes.jpeg" >
+                            <img src="assets/img/entregas-urgentes.jpeg">
                         </div>
                         <div class="grid-text-img">
                             <h1>TRANSFERÊNCIAS COM VEÍCULOS DEDICADOS</h1>
-                            <p>Oferecemos entregas dedicadas como uma solução personalizada para atender às suas necessidades específicas. Disponibilizamos o veículo adequado para sua operação, levando em consideração o tipo de carga, volume e distância a ser percorrida.</p>
+                            <p>Oferecemos entregas dedicadas como uma solução personalizada para atender às suas
+                                necessidades específicas. Disponibilizamos o veículo adequado para sua operação, levando
+                                em consideração o tipo de carga, volume e distância a ser percorrida.</p>
                             <a href="contato.html" class="btn-preco">Fazer orçamento</a>
                         </div>
                     </div>
