--- a/Sobre.html
+++ b/Sobre.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
-    <meta name="description" content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
-    <meta name="keywords" content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
+    <meta name="description"
+        content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
+    <meta name="keywords"
+        content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
     <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,16 +25,16 @@
 </head>
 
 <body>
-    <div class="color-menu">
-        <header-component></header-component>
+    <header-component></header-component>
+    <div class="box-mobile">
+        <a href="index.html">
+            <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
+        </a>
     </div>
     <main>
         <section id="grid-one" class="grid-one main-bg section">
-            <a href="index.html">
-                <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
-            </a>
             <div class="main-content grid-one-content">
-                <h2 class="grid-main-heading text-index" >3 razões para nos escolher</h2>
+                <h2 class="grid-main-heading text-index">3 razões para nos escolher</h2>
                 <div class="grid">
                     <div>
                         <h3>Comprometidos com a Eficiência e Agilidade</h3>
@@ -51,23 +53,24 @@
                             esperado, proporcionando-lhe a tranquilidade e a confiança necessárias para focar no que
                             realmente importa: seu negócio.
                             Através de nosso sistema o cliente fica atualizado quanto as suas coletas e entregas em
-                            tempo real site: 
-                            <a href="http://www.waysistemalogistico.com.br" target="_blank">www.waysistemalogistico.com.br</a>
+                            tempo real site:
+                            <a href="http://www.waysistemalogistico.com.br"
+                                target="_blank">www.waysistemalogistico.com.br</a>
                         </p>
                     </div>
                     <div>
                         <h3>Autorizações de Funcionamentos</h3>
                         <div class="funcionamentos">
                             <div class="text-funcionamento">
-                                    <li>AE: Especial Portaria 344</li>
-                                    <li>AFE: Medicamentos</li>
-                                    <li>AFE: Correlatos</li>
-                                    <li>AFE: Cosméticos</li>
-                                    <li>SIVISA: Licença de Funcionamento do Sistema de
-                                        Informação da Vigilância Sanitária
-                                    </li>
-                                    <li>CRF: Conselho Regional - Farmacêutico Responsavel</li>
-            
+                                <li>AE: Especial Portaria 344</li>
+                                <li>AFE: Medicamentos</li>
+                                <li>AFE: Correlatos</li>
+                                <li>AFE: Cosméticos</li>
+                                <li>SIVISA: Licença de Funcionamento do Sistema de
+                                    Informação da Vigilância Sanitária
+                                </li>
+                                <li>CRF: Conselho Regional - Farmacêutico Responsavel</li>
+
                                 </ul>
                             </div>
                         </div>
