--- a/localização.html
+++ b/localização.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Way Última Milha localização</title>
-    <meta name="description" content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
-    <meta name="keywords" content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
+    <meta name="description"
+        content="Soluções de Entregas Rápidas e Confiáveis para o Setor de Saúde em São Paulo. Bem-vindo à Way Última Milha, onde a excelência em logística se encontra com a dedicação ao setor de saúde. Localizados estrategicamente em São Paulo">
+    <meta name="keywords"
+        content="entregas, Eficiência e Agilidade, Tecnologia e Profissionalismo, Way última milha, transportadora, transporte, São Paulo, Entregas Rápidas, Saúde">
     <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +27,11 @@
 
 <body>
     <header-component></header-component>
-    <section id="localização">
+    <div class="box-mobile">
         <a href="index.html">
             <img class="image_logo2" src="assets/img/Logotipo-Way-Final.png">
         </a>
-    </section>
+    </div>
     <section class="grid-loc">
         <div class="text-loc">
             <h1 class="text-index">Regiões atendidas</h1>
@@ -141,6 +143,7 @@
                 align-items: center;
                 /* Centraliza verticalmente */
             }
+
             .text-loc {
                 justify-content: center;
                 display: flex;
