--- a/localização.html
+++ b/localização.html
@@ -62,7 +62,7 @@
         <div id="container-imagem"
             style="position: relative; display: inline-block; overflow: hidden; width: 600px; height: 400px;">
             <img id="imagem-localizacao" src="assets/img/imagem para localização.png" alt="Imagem para localização"
-                style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; cursor: grab;">
+                style="position: absolute; left: 0; top: 0; width: 100%; cursor: grab;">
             <div style="position: absolute;">
                 <a href="#" id="zoom-out">
                     <span style="font-size: 20px;">-</span>
@@ -189,7 +189,8 @@
 
                 .text-loc {
                     height: 60vh;
-                    margin-top: 5vh;
+                    margin-top: 10vh;
+                    margin-bottom: 6vh;
                     align-items: center;
                     /* Centraliza os itens na horizontal */
                     text-align: center;
