--- a/contato.html
+++ b/contato.html
@@ -60,33 +60,58 @@
                     <fieldset class="form-grid">
                         <input type="hidden" name="redirectTo" value="https://way-ulltima-milha.netlify.app">
                         <input type="hidden" name="accessKey" value="84bb621b-5db3-45c3-95ca-0c4aa116848b">
+                        <input type="text" name="honeypot" style="display: none;">
                         <legend>Nos envie um e-mail</legend>
                         <div class="form-group  ">
                             <label for="first-name">
                                 Primeiro nome
                             </label>
-                            <input type="text" name="name" id="first-name" placeholder="Your name" required>
+                            <input type="text" name="name" id="first-name" placeholder="Seu nome" required>
                         </div>
                         <div class="form-group ">
                             <label for="last-name">
                                 Sobrenome
                             </label>
-                            <input type="text" name="last-name" id="last-name" placeholder="Your last name" required>
+                            <input type="text" name="$Sobrenome" id="last-name" placeholder="Seu sobrenome" required>
                             <!-- Corrigido o ID para last-name -->
                         </div>
                         <div class="form-group full-width">
                             <label class="full-width">
                                 Telefone
                             </label>
-                            <input type="tel" name="phone" placeholder="Your phone" required>
+                            <input type="tel" name="phone" placeholder="Seu contato" required>
                         </div>
                         <!-- Optional -->
                         <div class="form-group full-width">
                             <label class="full-width" for="email">
                                 E-mail
                             </label>
-                            <input type="email" name="email" id="email" placeholder="Your e-mail" required>
+                            <input type="email" name="email" id="email" placeholder="Seu e-mail" required>
                         </div>
+                        <div class="form-group full-width">
+                            <label class="full-width" for="tipo_carga">Tipo de carga</label>
+                            <select name="$tipo_carga" id="tipo_carga" required>
+                                <option value="" selected disabled>Selecione o tipo de carga</option>
+                                <option value="medicamentos">Medicamentos</option>
+                                <option value="correlatos">Correlatos</option>
+                                <option value="perfumaria">Perfumaria</option>
+                                <option value="outros">Outros</option>
+                            </select>
+                        </div> 
+                        <div class="form-group full-width">
+                            <label class="full-width" for="volumetria">Volumetria</label>
+                            <input type="number" name="$volumetria" id="volumetria" placeholder="Volumetria (cm³)" required>
+                        </div>
+                    
+                        <div class="form-group full-width">
+                            <label class="full-width" for="peso_real">Peso real (kg)</label>
+                            <input type="number" name="peso_real" id="$peso_real" placeholder="Peso real (kg)" required>
+                        </div>
+                    
+                        <div class="form-group full-width">
+                            <label class="full-width" for="metragem_cubica">Metragem cúbica (m³)</label>
+                            <input type="number" step="0.001" name="$metragem_cubica" id="metragem_cubica" placeholder="Metragem cúbica (m³)" required>
+                        </div>                  
                         <div class="form-group full-width">
                             <label for="message">
                                 Mensagem
